--- a/app/views/index.html
+++ b/app/views/index.html
@@ -25,6 +25,7 @@
         </div>
         <div id="menu2" class="tab-pane fade">
             <h3>Lista de Archivos</h3>
+            Buscar: <input ng-model="searchText">
             <table class="table table-hover">
                 <thead>
                     <tr>
@@ -35,7 +36,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr ng-repeat="x in archivos">
+                    <tr ng-repeat="x in archivos | filter:searchText">
                         <td>[[x.descripcion]]</td>
                         <td>[[x.path]]</td>
                         <td>
