--- a/app/views/index.html
+++ b/app/views/index.html
@@ -11,6 +11,30 @@
 
     <div class="tab-content">
         <div id="home" class="tab-pane fade in active">
+          <h3>Lista de Archivos</h3>
+          Buscar: <input ng-model="searchText">
+          <table class="table table-hover">
+              <thead>
+                  <tr>
+                      <th>Descripcion</th>
+                      <th>Tipo</th>
+                      <th>Editar </th>
+                      <th>Eliminar</th>
+                  </tr>
+              </thead>
+              <tbody>
+                  <tr ng-repeat="x in archivos | filter:searchText">
+                      <td>[[x.descripcion]]</td>
+                      <td>[[x.path]]</td>
+                      <td>
+                         <input type="checkbox" ng-checked="master" ng-model="isTrue" ng-change="getIndex(x._id,isTrue )" />
+
+                      </td>
+                      <td><button type="button" class="btn btn-danger" ng-click="deleteTodo(x._id)"> <span class="glyphicon glyphicon-trash"></span></button></td>
+                  </tr>
+
+              </tbody>
+          </table>
         </div>
         <div id="menu1" class="tab-pane fade">
             <h3>Subir Archivos</h3>
@@ -24,29 +48,7 @@
             </div>
         </div>
         <div id="menu2" class="tab-pane fade">
-            <h3>Lista de Archivos</h3>
-            Buscar: <input ng-model="searchText">
-            <table class="table table-hover">
-                <thead>
-                    <tr>
-                        <th>Descripcion</th>
-                        <th>Tipo</th>
-                        <th>Editar</th>
-                        <th>Eliminar</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr ng-repeat="x in archivos | filter:searchText">
-                        <td>[[x.descripcion]]</td>
-                        <td>[[x.path]]</td>
-                        <td>
-                            <input type="checkbox" name="">
-                        </td>
-                        <td><button type="button" class="btn btn-danger" ng-click="deleteTodo(x._id)"> <span class="glyphicon glyphicon-trash"></span></button></td>
-                    </tr>
 
-                </tbody>
-            </table>
         </div>
     </div>
 </div>
