--- a/app/views/index.html
+++ b/app/views/index.html
@@ -28,10 +28,11 @@
                             <td>[[x.path]]</td>
                             <td>
                                 <input type="checkbox" ng-checked="master" ng-model="isTrue" ng-change="getIndex(x,isTrue )" />
-
                             </td>
                             <td>
-                                <button type="button" class="btn btn-danger" ng-click="deleteTodo(x._id)"> <span class="glyphicon glyphicon-trash"></span></button>
+                                <!--button type="button" class="btn btn-danger" ng-click="deleteTodo(x._id)"> <span class="glyphicon glyphicon-trash"></span></button-->
+                                <button type="button" class="btn btn-danger btn-primary btn-lg" data-toggle="modal" data-target="#myModal" ng-click="setDelete(x)">
+                                   <span class="glyphicon glyphicon-trash"> </span></button>
                             </td>
                         </tr>
 
@@ -43,9 +44,12 @@
                     <h3>Metadatos</h3>
                 </center>
                 <table class="table table-hover">
+
                     <tbody>
-                        <tr ng-repeat="y in meta.comp">
-                            <td>[[y.descripcion]]</td>
+                        <tr ng-repeat="y in meta.desc">
+
+                            <td><input type="text" ng-model="firstName" > </td>
+                            <td><button type="submit" class="btn" ng-click="update(y)"></button> </td>
                         </tr>
                     </tbody>
                 </table>
@@ -68,9 +72,26 @@
             </div>
 
         </div>
-        <div id="menu2" class="tab-pane fade">
 
-        </div>
+
+  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
+             <div class="modal-dialog modal-sm">
+               <div class="modal-content">
+                   <div class="modal-header">
+                       <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                       <h4 class="modal-title" id="myModalLabel">Eliminar Archivo: [[toDelete.descripcion]]</h4>
+                   </div>
+                   <div class="modal-body">
+
+                   </div>
+                   <div class="modal-footer">
+                       <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                       <button type="button" class="btn btn-primary" ng-click="deleteTodo(toDelete)" data-dismiss="modal" >Eliminar</button>
+                   </div>
+               </div>
+             </div>
+         </div>
+
     </div>
 </div>
 
