--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -5,12 +5,10 @@
     <meta charset="utf-8">
     <title>{% block title %}INE{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"> </script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"> </script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"> </script>
-    <script src"https://cdnjs.cloudflare.com/ajax/libs/angularjs-toaster/2.0.0/toaster.css"> </script>
-    <script src"https://cdnjs.cloudflare.com/ajax/libs/angularjs-toaster/2.0.0/toaster.js"> </script>
     <script type="text/javascript">
         var appName = 'appPrueba'
         angular.module(appName, [])
@@ -20,6 +18,11 @@
             });
     </script>
     <script src="js/controller.js"></script>
+    <link href="lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet"/>
+    <script href="lib/bootstrap/dist/js/bootstrap.js"/> </script>
+    <link href="lib/toastr/toastr.css" rel="stylesheet"/>
+    <script src="lib/toastr/toastr.js"></script>
+  
     {% block head %} {% endblock %}
 </head>
 
