--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,5 +1,8 @@
 {% extends 'layout.html' %} {% block head %} {% parent %} {% endblock %} {% block content %}
 
+
+
+
 <div class="container">
     <h2>Administrador de archivos</h2>
     <ul class="nav nav-tabs">
@@ -30,6 +33,10 @@
                 <table class="table table-hover">
                     <thead>
                         <tr>
+                            <th><input type="checkbox" ng-model="master" ng-change="isSelectAll()"></th>
+
+                        </tr>
+                        <tr>
                             <th>Descripcion</th>
                             <th>Tipo</th>
                             <th>Editar </th>
@@ -41,7 +48,7 @@
                             <td>[[x.descripcion]]</td>
                             <td>[[x.path]]</td>
                             <td>
-                                <input type="checkbox" ng-checked="master" ng-model="isTrue" ng-change="getIndex(x,isTrue )" />
+                                <input type="checkbox" ng-checked="master" name="check[]" ng-model="isTrue" ng-change="getIndex(x,isTrue )" />
                             </td>
                             <td>
                                 <!--button type="button" class="btn btn-danger" ng-click="deleteTodo(x._id)"> <span class="glyphicon glyphicon-trash"></span></button-->
@@ -62,7 +69,7 @@
                     <tbody>
                         <tr ng-repeat="y in meta.desc">
 
-                            <td><input type="text" ng-model="firstName" > </td>
+                            <td><input type="text" ng-model="firstName"> </td>
                             <td><button type="submit" class="btn" ng-click="update(firstName)"></button> </td>
                         </tr>
                     </tbody>
