--- a/app/views/parciales/subirN.html
+++ b/app/views/parciales/subirN.html
@@ -1,13 +1,33 @@
-<div class=" col-lg-4 col-lg-offset-4">
+<div class=" col-lg-4 col-lg-offset-4 text-right">
     <h3>Subir Archivos</h3>
     <br>
+    <script src="js/file.js"></script>
     <div class="form">
         <form action="archivos" method="post" enctype="multipart/form-data">
 
-            <input type="file" name="files" multiple="" required>
-            <br>
+
             <textarea rows="12" class="form-control input-sm" placeholder="Tus metadatos" name='descripcion' value='{{archivo.descripcion}}' required></textarea>
-            <br>
+            <!--  -->
+            <div class="col-xs-12 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+                      <!-- image-preview-filename input [CUT FROM HERE]-->
+                      <div class="input-group image-preview">
+                          <input type="text" class="form-control image-preview-filename" disabled="disabled"> <!-- don't give a name === doesn't send on POST/GET -->
+                          <span class="input-group-btn">
+                              <!-- image-preview-clear button -->
+                              <button type="button" class="btn btn-default image-preview-clear" style="display:none;">
+                                  <span class="glyphicon glyphicon-remove"></span> Clear
+                              </button>
+                              <!-- image-preview-input -->
+                              <div class="btn btn-default image-preview-input">
+                                  <span class="glyphicon glyphicon-folder-open"></span>
+                                  <span class="image-preview-input-title">Browse</span>
+                                  <input type="file" multiple name="input-file-preview" /> <!-- rename it -->
+                              </div>
+                          </span>
+                      </div><!-- /input-group image-preview [TO HERE]-->
+                  </div>
+            <!--  -->
+              <br/>
             <button type="submit" class="btn btn-info btn-sm " >Enviar</button>
         </form>
     </div>
