Subir archivos modificado , front y back

--- a/app/views/parciales/eliminar.html
+++ b/app/views/parciales/eliminar.html
@@ -6,7 +6,7 @@
                      <h4 class="modal-title" id="myModalLabel"> <strong> confirmar </strong></h4>
                  </div>
                  <div class="modal-body text-capitalize">
-                      eliminar archivo: [[toDelete.mimetype]]
+                      eliminar archivo: [[toDelete.originalname]]
                  </div>
                  <div class="modal-footer ">
                      <button type="button" class="btn btn-default text-capitalize" data-dismiss="modal"> cancel </button>
