--- a/app/views/parciales/subirN.html
+++ b/app/views/parciales/subirN.html
@@ -1,36 +1,112 @@
 <div class=" col-lg-4 col-lg-offset-4 text-right">
+
     <h3 class="text-right">Subir Archivos</h3>
     <br>
     <script src="js/file.js"></script>
-    <div class="form " >
-        <form name="subirN" action="archivos" method="post" enctype="multipart/form-data"  >
-          <div ng-class="{'has-error':subirN.descripcion.$error.required && subirN.descripcion.$touched}">
-            <textarea rows="12" class="form-control input-sm " placeholder="Tus metadatos ..." ng-model="descripcion" name='descripcion' value='{{archivo.descripcion}}' required></textarea>
-            <input type="text" placeholder="Tus metadatos2 ..." ng-model="subtema" name='subtema'>
-            <textarea rows="1" class="form-control input-sm " placeholder="Tus metadatos2 ..." ng-model="autor" name='autor' required></textarea>
-            <p ng-if="subirN.descripcion.$error.required && subirN.descripcion.$touched" class="help-block">*Los metadatos son requeridos</p>
-          </div>
-                      <!-- image-preview-filename input [CUT FROM HERE]-->
-                      <div class="input-group image-preview relleno-top">
-                          <input type="text" class="form-control image-preview-filename" disabled="disabled"> <!-- don't give a name === doesn't send on POST/GET -->
-                          <span class="input-group-btn">
-                              <!-- image-preview-clear button -->
-                              <button type="button" class="btn btn-default image-preview-clear" style="display:none;">
-                                  <span class="glyphicon glyphicon-remove"></span> Clear
-                              </button>
-                              <!-- image-preview-input -->
-                              <div class="btn btn-default image-preview-input">
-                                  <span class="glyphicon glyphicon-folder-open"></span>
-                                  <span class="image-preview-input-title" >Archivos</span>
-                                  <input type="file" multiple name="files" /> <!-- rename it -->
-                              </div>
-                          </span>
-                      </div><!-- /input-group image-preview [TO HERE]-->
-              <br/>
-            <button type="submit" ng-disabled="subirN.$invalid" class="btn btn-info btn-sm " >Enviar</button>
-        </form>
-    </div>
-</div>
-<div class="col-lg-4">
 
+    <div ng-controller='MostrarOcultarController' align="left">
+
+      <input ng-click='cambiarMenu()' type="radio" name="option" id="radio1" checked /> Plantilla de metadatos 1
+      <input ng-click='cambiarMenu()' type="radio" name="option" id="radio2"/> Plantilla de metadatos 2
+
+
+      <!-- Formulario 1-->
+      <ul ng-hide='menuState.show' class="form-pading">
+        <div class="form">
+            <form name="subirN" action="archivos" method="post" enctype="multipart/form-data">
+              <div ng-class="{'has-error':subirN.descripcion.$error.required && subirN.descripcion.$touched}" border="2px">
+​
+                  <h4 class="text-left">Descripción</h4>
+                  <input rows="12" class="form-control input-sm" placeholder="Descripción" ng-model="descripcion" name='descripcion' value='{{archivo.descripcion}}' required><br>
+​
+                  <h4 class="text-left">Autor</h4>
+                  <input rows="12" class="form-control input-sm" placeholder="Autor" ng-model="autor" name='autor'  required><br>
+​
+                  <h4 class="text-left">Fecha</h4>
+                  <input rows="12" class="form-control input-sm" placeholder="Fecha" ng-model="fecha" name='fecha' value='{{archivo.fecha}}'><br>
+​
+                  <h4 class="text-left">Subtema</h4>
+                  <input rows="12" class="form-control input-sm" placeholder="Subtema" ng-model="subtema" name='subtema' value='{{archivo.subtema}}'><br>
+​
+                  <p ng-if="subirN.descripcion.$error.required && subirN.descripcion.$touched" class="help-block">*Los metadatos son requeridos</p>
+              </div>
+
+              <!-- image-preview-filename input [CUT FROM HERE]-->
+              <div class="input-group image-preview relleno-top">
+                  <input type="text" class="form-control image-preview-filename" disabled="disabled"> <!-- don't give a name === doesn't send on POST/GET -->
+
+                  <span class="input-group-btn">
+                      <!-- image-preview-clear button -->
+                      <button type="button" class="btn btn-default image-preview-clear" style="display:none;">
+                          <span class="glyphicon glyphicon-remove"></span> Limpiar
+                      </button>
+                      <!-- image-preview-input -->
+                      <div class="btn btn-default image-preview-input">
+                          <span class="glyphicon glyphicon-folder-open"></span>
+                          <span class="image-preview-input-title" >Archivos</span>
+                          <input type="file" multiple name="files" /> <!-- rename it -->
+                      </div>
+                  </span>
+              </div>
+              <!-- /input-group image-preview [TO HERE]-->
+
+              <br/>
+              <button type="submit" ng-disabled="subirN.$invalid" class="btn btn-infoi btn-sm " >Enviar</button>
+            </form>
+        </div>
+      </ul>
+​
+​
+​
+      <!-- -->
+      <ul ng-show='menuState.show' class="form-pading">
+        <div class="form">
+            <form name="subirN" action="archivos" method="post" enctype="multipart/form-data">
+              <div ng-class="{'has-error':subirN.descripcion.$error.required && subirN.descripcion.$touched}" border="2px">
+​
+                  <h4 class="text-left">Descripción</h4>
+                  <input rows="12" class="form-control input-sm" placeholder="Descripción" ng-model="descripcion" name='descripcion' value='{{archivo.descripcion}}' required><br>
+​
+                  <h4 class="text-left">Autor</h4>
+                  <input rows="12" class="form-control input-sm" placeholder="Autor" ng-model="autor" name='autor'  required><br>
+​
+                  <h4 class="text-left">Titulo</h4>
+                  <input rows="12" class="form-control input-sm" placeholder="Titulo" ng-model="titulo" name='titulo'><br>
+​
+                  <h4 class="text-left">Sesión</h4>
+                  <input rows="12" class="form-control input-sm" placeholder="Sesion" ng-model="sesion" name='sesion'><br>
+​
+                  <p ng-if="subirN.descripcion.$error.required && subirN.descripcion.$touched" class="help-block">*Los metadatos son requeridos</p>
+              </div>
+
+              <!-- image-preview-filename input [CUT FROM HERE]-->
+              <div class="input-group image-preview relleno-top">
+                  <input type="text" class="form-control image-preview-filename" disabled="disabled"> <!-- don't give a name === doesn't send on POST/GET -->
+
+                  <span class="input-group-btn">
+                      <!-- image-preview-clear button -->
+                      <button type="button" class="btn btn-default image-preview-clear" style="display:none;">
+                          <span class="glyphicon glyphicon-remove"></span> Limpiar
+                      </button>
+                      <!-- image-preview-input -->
+                      <div class="btn btn-default image-preview-input">
+                          <span class="glyphicon glyphicon-folder-open"></span>
+                          <span class="image-preview-input-title" >Archivos</span>
+                          <input type="file" multiple name="files" /> <!-- rename it -->
+                      </div>
+                  </span>
+              </div>
+              <!-- /input-group image-preview [TO HERE]-->
+
+              <br/>
+              <button type="submit" ng-disabled="subirN.$invalid" class="btn btn-infoi btn-sm " >Enviar</button>
+            </form>
+        </div>
+      </ul>
+    </div>
+
+    </div>
+​
 </div>
+​
+<div class="col-lg-4"></div>
