--- a/app/views/parciales/archivos.html
+++ b/app/views/parciales/archivos.html
@@ -51,6 +51,6 @@
 
     </div>
     <br>
-    <button type="submit" class="btn btn-infoi btn-sm act-meta" ng-click="update(firstName)" ng-disabled="!exists_equals_data" ng-show="exists_equals_data">Guardar</button>
+    <button type="submit" class="btn btn-infoi btn-sm act-meta" ng-click="update()" ng-disabled="!exists_equals_data" ng-show="exists_equals_data">Guardar</button>
   </div>
 </div>
