--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -1,13 +1,16 @@
 <!doctype html>
 <html ng-app='appPrueba'>
-<head>
-    <meta charset="utf-8">
-    <title>{% block title %}INE{% endblock %}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1"> {% include "./header.html" %} {% block head %} {% endblock %}
-</head>
-<body ng-controller="padreCtrl"  ng-init="getArchivos()">
-
-    {% block content %} {% endblock %}
-
-</body>
+	<head>
+	    <meta charset="utf-8">
+	    <title>{% block title %}INE{% endblock %}</title>
+	    <meta name="viewport" content="width=device-width, initial-scale=1"> 
+	    	{% include "./header.html" %} 
+	    	{% block head %} 
+	    	{% endblock %}
+	</head>
+	
+	<body ng-controller="padreCtrl"  ng-init="getArchivos()">
+	    {% block content %} 
+	    {% endblock %}
+	</body>
 </html>
