--- a/app/views/parciales/archivos.html
+++ b/app/views/parciales/archivos.html
@@ -1,15 +1,14 @@
 <div class="row">
     <div class="col-lg-8">
-        <!--<h2>Filtrar</h2>-->
         <br>
         <div id="custom-search-input">
             <div class="input-group col-md-4">
-                <input type="text" class="form-control input-sm" placeholder="Buscar descripción" ng-model="searchText.descripcion" />
+                <input type="text" class="form-control input-sm" placeholder="Buscar metadatos" ng-model="searchText.descripcion" />
                 <span class="input-group-btn">
-                <button class="btn btn-infoi btn-sm" type="button">
-                    <i class="glyphicon glyphicon-search"></i>
-                </button>
-            </span>
+                    <button class="btn btn-infoi btn-sm" type="button">
+                        <i class="glyphicon glyphicon-search"></i>
+                    </button>
+                </span>
             </div>
         </div>
     </div>
@@ -29,27 +28,19 @@
             <tr ng-repeat="x in archivos | filter:searchText ">
                 <td><a ng-href="[[x.path]]">[[x.originalname]]</a></td>
                 <td>[[x.descripcion]]</td>
-                <td>
-                <input type="checkbox" ng-model='master[ [[x._id]] ]' ng-change="mergeArrays(x)" ng-checked="0" />                </td>
-                <td>
-                    <!--button type="button" class="btn btn-danger" ng-click="deleteTodo(x._id)"> <span class="glyphicon glyphicon-trash"></span></button-->
-                    <button type="button" class="btn btn-dangeri btn-primary btn-sm" data-toggle="modal" data-target="#myModal" ng-click="setDelete(x)">
-                        <span class="glyphicon glyphicon-trash"> </span></button>
-                </td>
+                <td><input type="checkbox" ng-model='master[ [[x._id]] ]' ng-change="mergeArrays(x)" ng-checked="0"/></td>
+                <td><button type="button" class="btn btn-dangeri btn-primary btn-sm" data-toggle="modal" data-target="#myModal" ng-click="setDelete(x)"><span class="glyphicon glyphicon-trash"> </span></button></td>
             </tr>
         </tbody>
     </table>
   </div>
   <div class="col-lg-4 text-right relleno-top-meta div-meta" ng-show="exists_equals_data">
-          <H5 align="left"><strong>Metadatos</strong></H5>
-          <div id="metadatos" class="meta">
-
-                  <div ng-repeat="data in finalArray track by $index" class="meta-dato">
-                      <input type="text" class="form-control.btn" ng-model="editFinalArray[ [[$index]] ].new_data" />
-
-              </div>
-
-    </div>
+        <H5 align="left"><strong>Metadatos</strong></H5>
+        <div id="metadatos" class="meta">
+            <div ng-repeat="data in finalArray track by $index" class="meta-dato">
+                <input type="text" class="form-control.btn" ng-model="editFinalArray[ [[$index]] ].new_data" />
+            </div>
+        </div>
     <br>
     <button type="submit" class="btn btn-infoi btn-sm act-meta" ng-click="update()" ng-disabled="!exists_equals_data" ng-show="exists_equals_data">Guardar</button>
   </div>
