--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,29 +1,31 @@
-<nod></nod>{% extends 'layout.html' %}
-{% block head %}
-{% parent %}
-{% endblock %}
-{% block content %}
+<nod></nod>{% extends 'layout.html' %} {% block head %} {% parent %} {% endblock %} {% block content %}
 
 <div class="container">
-    <h2>Administrador de Archivos</h2>
-    <ul class="nav nav-tabs">
-        <li class="active"><a data-toggle="tab" href="#home">Archivos</a></li>
-        <li><a data-toggle="tab" href="#menu1">Agregar</a></li>
-    </ul>
-    <div class="tab-content">
-        <div id="home" class="tab-pane fade in active">
-            <div>
-                <!--Lista de archivos -->
-                {% include "./sesiones/archivos.html" %}
-            </div>
-        </div>
-        <div id="menu1" class="tab-pane fade">
-            <!--Subir N archivos -->
-            {% include "./sesiones/subirN.html" %}
-        </div>
-            <!-- modal eliminar! -->
-            {% include "./sesiones/eliminar.html" %}
-    </div>
+    <md-content>
+        <md-tabs md-dynamic-height="" md-border-bottom="">
+            <md-tab label="Archivos">
+                <md-content class="md-padding">
+                    <!--Lista de archivos -->
+                    {% include "./archivos.html" %}
+                </md-content>
+            </md-tab>
+            <md-tab label="Sesiones">
+                <md-content class="md-padding">
+                    <!--Subir N archivos -->
+                    {% include "./sesiones/subirN.html" %}
+                </md-content>
+            </md-tab>
+            <md-tab label="acuerdos">
+                <md-content class="md-padding">
+                  <!--Subir N archivos -->
+                  {% include "./acuerdos/subirN.html" %}
+                </md-content>
+            </md-tab>
+        </md-tabs>
+        {% include "./eliminar.html" %}
+    </md-content>
 </div>
+
+
 
 {% endblock %}
